--- a/templates/plantilla-prof.html
+++ b/templates/plantilla-prof.html
@@ -43,7 +43,7 @@
 
                 <li class="dropdown">
 
-                    <a href="{% url 'login-profesor' %}" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Profesor, {{ user.first_name }} <b class="caret"></b></a>
+                    <a href="{% url 'login-profesor' %}" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Profesor, {{ usuario.first_name }} <b class="caret"></b></a>
 
                     <ul class="dropdown-menu">
                         <li>
