--- a/templates/primer-modulo-notas.html
+++ b/templates/primer-modulo-notas.html
@@ -32,7 +32,7 @@
 
                 <textarea id="t-input" style="width:400px; height:200px"></textarea>
                         <script type="text/javascript">
-                          new tinymce.editor.edit('editor',{
+                          new TINY.editor.edit('editor',{
                             id:'t-input',
 	                        width:584,
                             height:175,
