--- a/templates/plantilla-prof.html
+++ b/templates/plantilla-prof.html
@@ -14,6 +14,8 @@
     <link href="../static/css/plugins/morris.css" rel="stylesheet">
     <link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+    <script src="../static/javascript/tinyeditor.js"></script>
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
