--- a/templates/primer-modulo.html
+++ b/templates/primer-modulo.html
@@ -35,7 +35,7 @@
                                         <i class="fa fa-tasks fa-5x"></i>
                                     </div>
                                     <div class="col-xs-9 text-right">
-                                        <div class="huge">#</div>
+                                        <div class="huge">{{ estudiantes.count }}</div>
                                         <div>Estudiantes Registrados</div>
                                     </div>
                                 </div>
@@ -63,7 +63,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#">
+                            <a href="{% url 'primer-modulo-notas' %}">
                                 <div class="panel-footer">
                                     <span class="pull-left">Ver</span>
                                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
