--- a/templates/perfil-profe.html
+++ b/templates/perfil-profe.html
@@ -69,7 +69,7 @@
                     <label for="exampleInputnomre"><h4>Documento Identidad:</h4></label>
                   </div>
                   <div class ="col-md-3">
-                      <input type = "text" name="documento" class="form-control" value="{{ usuario.documento }}" placeholder="Documento">
+                      <input type = "text" name="cedula" class="form-control" value="{{ usuario.cedula }}" placeholder="Documento">
                   </div>
                 </div>
 
