--- a/templates/primer-modulo-notas.html
+++ b/templates/primer-modulo-notas.html
@@ -29,12 +29,12 @@
 
 
                 <div class="row">
-
+                <div class="col-lg-12">
                 <textarea id="t-input" style="width:400px; height:200px"></textarea>
                         <script type="text/javascript">
                           new TINY.editor.edit('editor',{
                             id:'t-input',
-	                        width:584,
+	                        width:684,
                             height:175,
                             cssclass:'te',
                             controlclass:'tecontrol',
@@ -53,7 +53,12 @@
                             toggle:{text:'show source',activetext:'show wysiwyg',cssclass:'toggle'},
                             resize:{cssclass:'resize'}});
                           </script>
-
+                    <div class="form-group">
+                            <label>Subir un Archivo</label>
+                            <input type="file">
+                    </div>
+                    <button type="button" class="btn btn-primary">Enviar</button>
+                </div>
                 </div>
 
             </div>
