--- a/templates/perfil-profe.html
+++ b/templates/perfil-profe.html
@@ -86,24 +86,11 @@
 
                 <div class="col-md-12"></div>
 
-                <div class="col-ms-12 form-group">
-                  <div class ="col-md-2">
-                    <label for="exampleInputnomre"><h4>Contraseña:</h4></label>
+                  <div class="col-md-9" style="text-align:right">
+                     <a href="{% url 'modificar-contra-profesor' %}"> Cambio de contraseña aquí </a>
                   </div>
-                  <div class ="col-md-4">
-                    <input type="password"  name = "password1" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                  </div>
-                  <div class ="col-md-3">
-                    <label for="exampleInputnomre"><h4>Confirmar Contraseña:</h4></label>
-                  </div>
-                  <div class ="col-md-3">
-                    <input type="password" name='password2' class="form-control" id="exampleInputPassword2" placeholder="Password">
-                  </div>
-                </div>
 
-                <div class="col-md-12"></div>
-
-                <div class="col-md-12">
+                <div class="col-md-3">
                     <p><button type="submit" class="btn btn-primary btn-lg pull-right">Actualizar Datos</button> </p>
                 </div>
 
