--- a/templates/reporte_estudiantes.html
+++ b/templates/reporte_estudiantes.html
@@ -1,1 +1,9 @@
-Hola Mundito
+<style>
+    @page {
+        size: letter landscape;
+        margin: 2cm;
+    }
+</style>
+<img src="{{path}}/{{ estudiante.id.first_name }}" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+ <h1> jhjhg </h1>
