--- a/templates/eliminar-estudiante.html
+++ b/templates/eliminar-estudiante.html
@@ -32,7 +32,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Registro <small> Nuevo Estudiante</small>
+                            Eliminar <small> Estudiante</small>
                         </h1>
                         <ol class="breadcrumb">
                             <li>
