--- a/templates/plantilla2.html
+++ b/templates/plantilla2.html
@@ -43,11 +43,10 @@
               </ul>
             </li>
             <li><a href="#">RECURSOS</a></li>
-            <li><a href="#">LOREM</a></li>
 
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Configuración</a></li>
+            <li><a href="{% url 'perfil-estudiante' %}#">Configuración</a></li>
             <li class="active"><a href="{% url 'logout' %}">Salir</a></li>
           </ul>
         </div><!--/.nav-collapse -->
