--- a/templates/primer-modulo-estudiantes.html
+++ b/templates/primer-modulo-estudiantes.html
@@ -31,11 +31,18 @@
                 <div class="row">
 
                 <div class="col-sm-7 col-md-7">
-                <table class="table table-bordered">
+                <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title"><i class="fa fa-money fa-fw"></i> Lista de Estudiantes Inscritos</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div class="table-responsive">
+                <table class="table table-bordered table-hover table-striped">
                 <thead>
                   <tr>
-                    <th>Lista de estudiantes</th>
-                    <th></th><th></th>
+                    <th>Nombre</th>
+                    <th>Documento</th>
+                      <th>Correo</th>
                   </tr>
                 </thead>
                     {% for estudiante in estudiantes %}
@@ -55,7 +62,11 @@
                     {% endfor %}
                  </table>
                 </div>
-
+                            <div class="text-right">
+                                    <a href="{% url 'reporte-estudiante' %}">Descargar Reporte <i class="fa fa-arrow-circle-right"></i></a>
+                                </div>
+                </div>
+                </div>
                 </div>
 
             </div>
@@ -63,5 +74,5 @@
 
         </div>
         <!-- /#page-wrapper -->
-
+</div>
 {% endblock %}
