--- a/templates/reporte_estudiantes.html
+++ b/templates/reporte_estudiantes.html
@@ -3,7 +3,42 @@
         size: letter landscape;
         margin: 2cm;
     }
+    .table-bordered {
+        border: 1px solid #ddd;
+     }
+    .table {
+        display: table;
+        border-collapse: separate;
+        border-spacing: 2px;
+        border-color: grey;
+    }
 </style>
-<img src="{{path}}/{{ estudiante.id.first_name }}" />
+
+<img src="{{path}}/ logo" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
- <h1> jhjhg </h1>
+ <h1> Listado de Estudiantes Inscritos </h1>
+<br />
+
+<table class="table table-bordered">
+                <thead>
+                  <tr>
+                    <th>Nombre</th>
+                    <th>Documento</th><th>Correo</th>
+                  </tr>
+                </thead><br />
+                    {% for estudiante in estudiantes %}
+                        <tbody>
+                          <tr>
+                              <td>
+                                <h4>{{ estudiante.id.first_name }} {{ estudiante.id.last_name }}</h4>
+                              </td>
+                              <td>
+                                <h4>{{ estudiante.documento }}</h4>
+                              </td>
+                              <td>
+                                <h4>{{ estudiante.id.email }}</h4>
+                              </td>
+                          </tr>
+                         </tbody>
+                    {% endfor %}
+                 </table>
