--- a/templates/curso.html
+++ b/templates/curso.html
@@ -8,7 +8,7 @@
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
 				<h4>INGLES POR MODULOS</b></h4>
-				<p>JUST TAKE A LOOK & CONTACT US</p>
+				<p>JUST TAKE A LOOK</p>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
@@ -20,19 +20,19 @@
 			<br><br>
 			<div class="col-lg-4">
 				<i class="fa fa-desktop"></i>
-				<h4>INGLES BASICO</h4>
+				<h4>MODULO 1</h4>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
 				<i class="fa fa-cogs"></i>
-				<h4>INGLES INTERMEDIO</h4>
+				<h4>MODULO 2</h4>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
 				<i class="fa fa-eye"></i>
-				<h4>INGLES AVANZADO</h4>
+				<h4>MODULO 3</h4>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
 			</div><!-- col-lg-4 -->
 		</div><!-- row -->
@@ -41,13 +41,13 @@
 			<br><br>
 			<div class="col-lg-4">
 				<i class="fa fa-heart"></i>
-				<h4>INGLES 4</h4>
+				<h4>MODULO 4</h4>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
 				<i class="fa fa-shopping-cart"></i>
-				<h4>INGLES 5</h4>
+				<h4>MODULO 5</h4>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
 			</div><!-- col-lg-4 -->
 		</div><!-- row -->
