--- a/templates/index.html
+++ b/templates/index.html
@@ -70,20 +70,21 @@
 			<br><br>
 			<div class="col-lg-4">
 				<i class="fa fa-heart"></i>
-				<h4>DESIGN</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+				<h4>Números de Teléfono</h4>
+				<p>830 6287.</p>
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
 				<i class="fa fa-laptop"></i>
 				<h4>DONDE ESTAMOS.</h4>
+<p>Kilometro 3, Barrio El Diamante, Girardot</p>
 				
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
 				<i class="fa fa-trophy"></i>
-				<h4>DO</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+				<h4>Página Oficial</h4>
+				<p>http://www.ensmagirardot.edu.co</p>
 			</div><!-- col-lg-4 -->
 		</div><!-- row -->
 		<br>
