--- a/templates/inicio-profe.html
+++ b/templates/inicio-profe.html
@@ -10,7 +10,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Bienvenido <small> Profesor, </small>
+                            Bienvenido
                         </h1>
                         <ol class="breadcrumb">
                             <li class="active">
@@ -22,8 +22,21 @@
 
                 <div class="row">
 
-
+                    <div class="col-md-8 col-lg-8">
+                    <div class="panel panel-info">
+                      <div class="panel-heading">Panel de Administración</div>
+                      <div class="panel-body">
+                        <p>Bienvenido profesor <strong>{{ usuario.id.first_name }} {{ usuario.id.last_name }}</strong>, Este es el  panel de administración de <strong>English Easy</strong>, aquí podrá registrar nuevos estudiantes, ingresar notas parciales y generar reportes!</p>
+                          <p></p>
+                      </div>
                     </div>
+                    </div>
+
+                    <div class="col-md-4 col-lg-4">
+                        <div class="centered"><img src="../static/img/Escudo.png" class="img-responsive" alt=""/></div></div>
+                    </div>
+
+                </div>
                 </div>
                 <!-- /.row -->
 
