--- a/templates/perfil-profe.html
+++ b/templates/perfil-profe.html
@@ -11,7 +11,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Perfil <small> Profesor, {{ usuario.first_name }} </small>
+                            Perfil <small> Profesor, {{ usuario.id.first_name }} </small>
                         </h1>
                         <ol class="breadcrumb">
                             <li class="active">
@@ -46,13 +46,13 @@
                     <label for="exampleInputnomre"><h4>Nombres:</h4></label>
                   </div>
                   <div class ="col-md-5">
-                    <h4>{{ usuario.first_name }} </h4>
+                    <h4>{{ usuario.id.first_name }} </h4>
                   </div>
                   <div class ="col-md-1">
                     <label for="exampleInputnomre"><h4>Apellidos:</h4></label>
                   </div>
                   <div class ="col-md-5">
-                     <h4>{{ usuario.last_name }}</h4>
+                     <h4>{{ usuario.id.last_name }}</h4>
                   </div>
                 </div>
 
@@ -63,7 +63,7 @@
                     <label for="exampleInputnomre"><h4>Correo:</h4></label>
                   </div>
                   <div class ="col-md-5">
-                    <input type = "text" name="email" class="form-control" value="{{ usuario.email }}" placeholder="Correo">
+                    <input type = "text" name="email" class="form-control" value="{{ usuario.id.email }}" placeholder="Correo">
                   </div>
                   <div class ="col-md-3">
                     <label for="exampleInputnomre"><h4>Documento Identidad:</h4></label>
@@ -80,7 +80,7 @@
                     <label for="exampleInputnomre"><h4>Username:</h4></label>
                   </div>
                   <div class ="col-md-4">
-                    <h4>{{ usuario.username }}</h4>
+                    <h4>{{ usuario.id.username }}</h4>
                   </div>
                 </div>
 
