--- a/templates/plantilla-prof.html
+++ b/templates/plantilla-prof.html
@@ -38,14 +38,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Curso Ingles</a>
+                <a class="navbar-brand" href="#">Admin <i class="fa fa-leaf"></i> English Easy</a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
 
                 <li class="dropdown">
 
-                    <a href="{% url 'login-profesor' %}" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Profesor, {{ usuario.first_name }} <b class="caret"></b></a>
+                    <a href="{% url 'login-profesor' %}" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Profesor, {{ usuario.id.first_name }} <b class="caret"></b></a>
 
                     <ul class="dropdown-menu">
                         <li>
