--- a/templates/curso.html
+++ b/templates/curso.html
@@ -7,7 +7,7 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
-				<h4>INGLES POR MODULOS</b></h4>
+				<h4><b>INGLES POR MODULOS</b></h4>
 				<p>JUST TAKE A LOOK</p>
 				</div>
 			</div><!-- row -->
@@ -46,7 +46,7 @@
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
-				<i class="fa fa-shopping-cart"></i>
+				<i class="fa fa-list-alt"></i>
 				<h4>MODULO 5</h4>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
 			</div><!-- col-lg-4 -->
