--- a/templates/plantilla1.html
+++ b/templates/plantilla1.html
@@ -8,8 +8,10 @@
     <title> {% block title %} {% endblock %}</title>
 
 
-    <link href="static/vendors/bootstrap-3.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/css/style-general.css" rel="stylesheet">
+    <link href="../static/vendors/bootstrap-3.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/style-general.css" rel="stylesheet">
+    <link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
 </head>
 
 
@@ -23,15 +25,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'index' %}">INGLES <i class="fa fa-circle"></i></a>
+          <a class="navbar-brand" href="{% url 'index' %}">ENGLISH EASY</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="{% url 'index' %}">INICIO</a></li>
             <li><a href="{% url 'curso' %}">CURSO</a></li>
-            <li><a href="#">CONTACTO</a></li>
-            <li><a href="#">...</a></li>
-            <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li>
+            <li><a href="{% url 'contacto' %}"><i class="fa fa-envelope-o"></i> CONTACTO</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -53,28 +53,18 @@
 Para mayor información comuniquese al: (1) 000 29 00
                 </p></div>
                 <div class="col-sm-3 col-md-3 pull-right">
-            <form class="navbar-form" role="search">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search" name="q">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                    </div>
-                </div>
-            </form>
+                    <div class="centered"><img src="../static/img/Escudo.png" class="img-responsive" alt=""/></div></div>
         </div>
 
                     </div>
                 </div>
-			</div><!-- row -->
-		</div><!-- container -->
-	</div><!--rwrap-->
 
 <!-- FOOTER -->
 	<div class="lineBlack">
 			<div class="container">
 				<div class="row downLine">
 					<div class="col-md-6 text-left copy">
-						<p>Copyright &copy; All Rights Reserved.</p>
+						<p>Copyright &copy; Escuela Normal Superior Girardot.</p>
 					</div>
 					<div class="col-md-6 text-right dm">
 
@@ -82,8 +72,7 @@ Para mayor información comuniquese al: (1) 000 29 00
 
 							<li class="active"><a href="{% url 'index' %}">Inicio</a></li>
 							<li><a href="{% url 'curso' %}">Curso</a></li>
-							<li><a href="#">Contacto</a></li>
-							<li><a href="#">...</a></li>
+							<li><a href="{% url 'contacto' %}">Contacto</a></li>
 						</ul>
 					</div>
 				</div>
@@ -91,12 +80,12 @@ Para mayor información comuniquese al: (1) 000 29 00
 		</div><!-- Footer -->
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="static/javascript/jquery.min.js"></script>
+<script src="../static/javascript/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="static/vendors/bootstrap-3.3.6/dist/js/bootstrap.min.js">
+<script src="../static/vendors/bootstrap-3.3.6/dist/js/bootstrap.min.js">
 </script>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="static/javascript/bootstrap.min.js"></script>
+    <script src="../static/javascript/bootstrap.min.js"></script>
 
 
 </body>
